--- a/app/globals.css
+++ b/app/globals.css
@@ -25,16 +25,15 @@
 
 html,
 body {
-	background-color: black;
-	color: white;
 	overflow-x: hidden;
 }
+
 body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
+	background-color: rgb(0, 0, 0);
+	color: white;
 	min-height: 100vh;
-
-
 }
 
 h1,
