--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-:root {
-	--purple-taupe: #54394b;
-	--Dark-charcoal: #303130;
-	--crayola: #eeb3d2;
-	--philippine-gray: #8a9090;
-	--font-avenir: 'Avenir', sans-serif;
-}
+	:root {
+		--purple-taupe: #54394b;
+		--Dark-charcoal: #303130;
+		--crayola: #eeb3d2;
+		--philippine-gray: #8a9090;
+		--font-avenir: "Avenir", sans-serif;
+	}
 }
 
 *,
@@ -49,7 +49,6 @@ p,
 li {
 	text-wrap: pretty;
 	overflow-wrap: break-word;
-	
 }
 img,
 video,
@@ -58,10 +57,62 @@ svg {
 	max-width: 100%;
 }
 
-.center{
+.center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+.animate-rotate-cercle-right {
+	rotate: -4deg;
+	animation: rotate-cercle-right 18s linear infinite;
+}
+.animate-rotate-cercle-left{
+	animation: rotate-cercle-left 18s linear infinite;
 
+}
 
+@keyframes rotate-cercle-right {
+	0% {
+	  rotate: -11deg;
+	}
+	25% {
+	  rotate: -4deg;
+	}
+	50% {
+	  rotate: 5deg;
+	}
+	75% {
+	  rotate: -4deg;
+	}
+	100% {
+	  rotate: -11deg;
+	}
+  }
+@keyframes rotate-cercle-left {
+	0% {
+	  rotate: 0deg;
+	}
+	50% {
+	  rotate: -11deg;
+	}
+	100% {
+	  rotate: 0deg;
+	}
+  }
+
+/* width */
+::-webkit-scrollbar {
+	width: 3px;
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+	background: var(--Dark-charcoal);
+	border-radius: 10px;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+	background: black;
+	border-radius: 10px;
+}
