--- a/app/globals.css
+++ b/app/globals.css
@@ -64,10 +64,10 @@ svg {
 }
 .animate-rotate-cercle-right {
 	rotate: -4deg;
-	animation: rotate-cercle-right 18s linear infinite;
+	animation: rotate-cercle-right 15s ease-in infinite;
 }
 .animate-rotate-cercle-left{
-	animation: rotate-cercle-left 18s linear infinite;
+	animation: rotate-cercle-left 15s ease-out infinite;
 
 }
 
@@ -102,17 +102,17 @@ svg {
 
 /* width */
 ::-webkit-scrollbar {
-	width: 3px;
+	width: 10px;
 }
 
 /* Track */
 body::-webkit-scrollbar-track {
 	background: var(--Dark-charcoal);
-	border-radius: 10px;
+
 }
 
 /* Handle */
 body::-webkit-scrollbar-thumb {
 	background: black;
-	border-radius: 10px;
+
 }
