--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,7 @@
 html,
 body {
 	overflow-x: hidden;
+	
 }
 
 body {
@@ -102,12 +103,13 @@ li {
 
 /* Track */
 body::-webkit-scrollbar-track {
-	background: var(--Dark-charcoal);
 
+	background: black;
 }
 
 /* Handle */
 body::-webkit-scrollbar-thumb {
-	background: black;
+	background: var(--Dark-charcoal);
+	border-radius: 10px;
 
 }
